--- a/style.css
+++ b/style.css
@@ -1,14 +1,115 @@
 body {
-    background-color: #443565;
+    background-color: #0EA4AB;
+    font-family: helvetica;
+    font-family: 'Indie Flower', cursive;
 }
-button {
+.page-header{
+  background-color: #0EA4AB;
+}
+/* ----cube3D---*/
+.wrap {
+	perspective: 1000px;
+	perspective-origin: 50% 20px;
+}
+
+.cube {
+	position: relative;
+	width: 100px;
+	transform-style: preserve-3d;
+}
+
+.side {
+	position: absolute;
+	width: 100px;
+	height: 100px;
+  background-color: #fff;
+  border-radius: 10%;
+  border: solid 2px #ccc;
+}
+
+.dot {
+  background-color: #000;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin: 0 auto;
+  position:absolute;
+}
+.center{
+  margin-top: 45px;
+  margin-left: 45px;
+}
+.first{
+  margin-top:20px;
+  margin-left: 20px;
+}
+.second {
+  margin-top: 45px;
+  margin-left: 20px;
+}
+.third {
+  margin-top: 70px;
+  margin-left: 20px;
+}
+.fourth {
+  margin-top: 20px;
+  margin-left: 70px;
+}
+.fivth {
+  margin-top: 45px;
+  margin-left: 70px;
+}
+.sixth {
+  margin-top: 70px;
+  margin-left: 70px;
+}
+
+.back {
+	transform: translateZ(-50px) rotateY(180deg);
+}
+.right {
+	transform: rotateY(-270deg) translateX(50px);
+	transform-origin: top right;
+}
+.left {
+	transform: rotateY(270deg) translateX(-50px);
+	transform-origin: center left;
+}
+.top {
+	transform: rotateX(-90deg) translateY(-50px);
+	transform-origin: top center;
+}
+.bottom {
+	transform: rotateX(90deg) translateY(50px);
+	transform-origin: bottom center;
+}
+.front {
+	transform: translateZ(50px);
+}
+@keyframes spin {
+	from { transform: rotateY(0); }
+	to { transform: rotateY(360deg); }
+}
+
+.cube {
+	animation: spin 4s infinite linear;
+}
+/*-------------*/
+.roll_button, .clear_button{
     height: 90px;
     width: 90px;
     display: inline-block;
     margin: 0 auto;
 }
+
+.circle{
+  margin-top: 2%;
+  background-color: #fff;
+  width: 350px;
+  height:350px;
+  border-radius: 50%;
+}
 h1 {
-    font-family: helvetica;
     display: block;
     text-align: center;
     color: #ffffff;
@@ -18,12 +119,9 @@ input {
     margin: 3%;
 }
 #score {
-    display: block;
     text-align: center;
-    font-family: helvetica;
     font-size: 15pt;
     color: #ffffff;
-    margin: 3%;
 }
 #cube {
     width: 60px;
@@ -38,7 +136,8 @@ input {
     height: 50px;
     background-color: #111111;
     margin: 2%;
-    display: inline-block;
+    border:solid 1px #ccc;
+    border-radius: 10px;
 }
 #one {
     background-image: url(img/one.jpg);
@@ -61,8 +160,11 @@ input {
 span {
     display: block;
     text-align: center;
-    font-family: helvetica;
     font-size: 25pt;
     color: #ffffff;
-    margin: 3%;
+}
+.text-muted{
+  font-size: 0.7em;
+  font-family:Helvetica;
+  color:#eee;
 }
