--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
 body {
     background-color: #0EA4AB;
     font-family: helvetica;
@@ -8,20 +12,21 @@ body {
 }
 /* ----cube3D---*/
 .wrap {
-	perspective: 1000px;
+  margin-left: 20%;
+	perspective: 800px;
 	perspective-origin: 50% 20px;
+  padding-bottom: 20px;
 }
-
 .cube {
 	position: relative;
-	width: 100px;
+	width: 50px;
 	transform-style: preserve-3d;
 }
 
 .side {
 	position: absolute;
-	width: 100px;
-	height: 100px;
+	width: 50px;
+	height: 50px;
   background-color: #fff;
   border-radius: 10%;
   border: solid 2px #ccc;
@@ -29,62 +34,62 @@ body {
 
 .dot {
   background-color: #000;
-  width: 10px;
-  height: 10px;
+  width: 10%;
+  height: 10%;
   border-radius: 50%;
   margin: 0 auto;
   position:absolute;
 }
 .center{
-  margin-top: 45px;
-  margin-left: 45px;
+  margin-top: 45%;
+  margin-left: 45%;
 }
 .first{
-  margin-top:20px;
-  margin-left: 20px;
+  margin-top:20%;
+  margin-left: 20%;
 }
 .second {
-  margin-top: 45px;
-  margin-left: 20px;
+  margin-top: 45%;
+  margin-left: 20%;
 }
 .third {
-  margin-top: 70px;
-  margin-left: 20px;
+  margin-top: 70%;
+  margin-left: 20%;
 }
 .fourth {
-  margin-top: 20px;
-  margin-left: 70px;
+  margin-top: 20%;
+  margin-left: 70%;
 }
 .fivth {
-  margin-top: 45px;
-  margin-left: 70px;
+  margin-top: 45%;
+  margin-left: 70%;
 }
 .sixth {
-  margin-top: 70px;
-  margin-left: 70px;
+  margin-top: 70%;
+  margin-left: 70%;
 }
 
 .back {
-	transform: translateZ(-50px) rotateY(180deg);
+	transform: translateZ(-25px) rotateY(180deg);
 }
 .right {
-	transform: rotateY(-270deg) translateX(50px);
+	transform: rotateY(-270deg) translateX(25px);
 	transform-origin: top right;
 }
 .left {
-	transform: rotateY(270deg) translateX(-50px);
+	transform: rotateY(270deg) translateX(-25px);
 	transform-origin: center left;
 }
 .top {
-	transform: rotateX(-90deg) translateY(-50px);
+	transform: rotateX(-90deg) translateY(-25px);
 	transform-origin: top center;
 }
 .bottom {
-	transform: rotateX(90deg) translateY(50px);
+	transform: rotateX(90deg) translateY(25px);
 	transform-origin: bottom center;
 }
 .front {
-	transform: translateZ(50px);
+	transform: translateZ(25px);
 }
 @keyframes spin {
 	from { transform: rotateY(0); }
@@ -92,36 +97,45 @@ body {
 }
 
 .cube {
-	animation: spin 4s infinite linear;
+	animation: spin 25s infinite linear;
 }
 /*-------------*/
+.buttonField{
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 .roll_button, .diceAmount{
-    height: 90px;
-    width: 90px;
-    display: inline-block;
-    margin: 0 auto;
-    border-radius: 50%;
-    border: solid 10px #888;
-    font-size: 2em;
     text-align: center;
 }
-
-.circle{
-  margin-top: 2%;
-  background-color: #ccc;
-  width: 350px;
-  height:350px;
+.roll_button{
+  font-size: 1.8em;
+  height: 200px;
+  width: 200px;
   border-radius: 50%;
+  border: solid 10px #ccc;
+  ;
+  margin-bottom: 2%;
+}
+.diceAmount{
+  font-size: 1.5em;
+  float:right;
+  height: 50px;
+  width: 170px;
+  margin-right: 50px;
+  margin-bottom: 20px;
+  margin-top:20px;
+}
+.table{
+  margin:0;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 2px;
 }
 
 h1 {
     display: block;
     text-align: center;
     color: #ffffff;
-}
-input {
-    height: 20px;
-    margin: 3%;
 }
 #score {
     text-align: center;
@@ -137,8 +151,7 @@ input {
     display: inline-block;
 }
 .diceField{
-  width:auto;
-  height:auto;
+  text-align: center;
 }
 .dice {
     width: 50px;
@@ -177,4 +190,8 @@ span {
   font-size: 0.7em;
   font-family:Helvetica;
   color:#eee;
+}
+footer{
+  position: absolute;
+  bottom: 0;
 }
